# TFG_ADI

./: .gitignore  README.md
app/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
app/data/Ejemplos/: ejemplos_ejercicios.json
app/data/Rubricas/: rubrica_errores.json
app/data/Teoria/: tema1.md  tema2.md  tema3.md  tema4.md  tema5.md
app/src/: app.py  controlador.py
app/src/agentes/critico/: nodo_critico.py
app/src/agentes/demostrador/: nodo_demostrador.py
app/src/agentes/educador/: nodo_educador.py  rag_manager.py
app/src/agentes/evaluador/: nodo_evaluador.py
app/src/grafos/: grafo_agentes.py
app/src/utils/: db_manager.py  funciones_auxiliares.py
