[project]
name = "TFG-ADI"
version = "0.1.0"
description = "Entorno de Python para el sistema multi-agente de la asignatura de Introducción a la Programación"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.11",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.9",
    "langgraph>=1.0.8",
    "langgraph-checkpoint-postgres>=3.1.0",
    "langsmith>=0.7.1",
    "protobuf<=3.20.3",
    "psycopg-binary>=3.3.4",
    "psycopg-pool>=3.3.1",
    "python-dotenv>=1.2.1",
    "streamlit>=1.54.0",
]
